# docDefender_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml
configs/: dev.env  prod.env
docDefender_backend/: asgi.py  settings.py  wsgi.py
web_application/docDefender_backend/: settings.py  urls.py
web_application/document_processor/: models.py  views.py
web_application/document_processor/migrations/: 0001_initial.py  0002_remove_filemodel_file_remove_filemodel_file_url_and_more.py
web_application/document_processor/processors/: doc_processor.py  docx_processor.py  jpg_processor.py  pdf_processor.py  png_processor.py  processors.py  txt_processor.py  xml_processor.py
