[tool.poetry]
name = "docdefender-backend"
version = "0.1.0"
description = ""
authors = ["pavel <pavelklimovskoy@mail.ru>"]
readme = "README.md"
packages = [{include = "docdefender_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
python-docx = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
